# clicks-core

./: .gitignore  Cargo.toml  Changes.md  README.md  deploy
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: deploy_all.yml
src/: boot.rs  cbnet.rs  example.cks  logger.rs  main.rs  metronome.rs  network.rs  playback.rs  timecode.rs
src/audio/: config.rs  handler.rs  metronome.rs  mod.rs  notification.rs  playback.rs  processor.rs  source.rs  timecode.rs
src/communication/: binnet.rs  interface.rs  jsonnet.rs  mod.rs  netport.rs  osc.rs
src/hardware/: display.rs  input.rs  mod.rs  usb.rs
