[package]
name = "clicks-core"
version = "1.0.0"
edition = "2024"

[dependencies]
crossbeam-channel = "0.5.15"
jack = "0.13.3"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
common = { git = "https://github.com/lexag/clicks-common.git", branch = "no-std" }
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
arc-swap = "1.7.1"
hound = "3.5.1"
local-ip-address = "0.6.5"
rosc = "0.11.4"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.2.0"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
