[package]
name = "clicks-core"
version = "1.2.4"
edition = "2024"

[dependencies]
crossbeam-channel = "0.5.15"
jack = "0.13.3"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
common = { git = "https://github.com/lexag/clicks-common.git", branch = "dev", features = [ "std" , "serde", "postcard", "json"] }
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
arc-swap = "1.7.1"
hound = "3.5.1"
local-ip-address = "0.6.5"
rosc = "0.11.4"
rppal = "0.22.1"
ssd1306 = "0.10.0"
embedded-graphics = "0.8.1"
linux-embedded-hal = "0.4.1"
bitflags = "2.10.0"
hex = "0.4.3"
postcard = { version = "1.1.3", features = ["use-std"] }

[features]
i2c-ui = []
